[gd_scene load_steps=2 format=2]

[ext_resource path="res://Base.gd" type="Script" id=1]

[node name="Base" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HR_label" type="Label" parent="."]
margin_left = 117.337
margin_top = 95.2662
margin_right = 496.337
margin_bottom = 275.266
text = "Heart Rate comes here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RR_label" type="Label" parent="."]
margin_left = 120.512
margin_top = 266.705
margin_right = 499.512
margin_bottom = 446.705
text = "RR comes here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
